Major changes implemented (#21)
---------

Co-authored-by: Delice0 <59118341+Delice0@users.noreply.github.com>